# molecube

./: .gitignore  CMakeLists.txt
cmake/: ARMv7sf.cmake
common/: AD9914.cpp  AD9914.h  CmdLineArgs.cpp  CmdLineArgs.h  dac.cpp  dac.h  dds_pulse.cpp  dds_pulse.h  dds_pulse_info.cpp  dds_pulse_info.h  fpga.c  fpga.cpp  fpga.h  linux_file_util.c  linux_file_util.cpp  linux_file_util.h  my_endian.h  self_test.cpp  self_test.h  spi_util.cpp  spi_util.h  string_func.cpp  string_func.h  timing.c  timing.h  ttl_pulse.h  util.cpp  verbosity.cpp  verbosity.h
common/linux/: remap_addr.c  remap_addr.h
common/xilinx/: xbasic_types.h  xil_io.h  xil_types.h  xparameters.h  xspi.c  xspi.h  xspi_l.h  xspi_options.c  xspi_selftest.c  xspi_sinit.c  xspi_stats.c
common_swsrc/: AD9914.cpp  AD9914.h  CmdLineArgs.cpp  CmdLineArgs.h  dac.cpp  dac.h  dds_pulse.cpp  dds_pulse.h  dds_pulse_info.cpp  dds_pulse_info.h  fpga.c  fpga.h  linux_file_util.c  linux_file_util.h  my_endian.h  self_test.cpp  self_test.h  spi_util.cpp  spi_util.h  string_func.cpp  string_func.h  timing.c  timing.h  ttl_pulse.cpp  ttl_pulse.h  util.cpp  util.h  verbosity.cpp
common_swsrc/linux/: remap_addr.c  remap_addr.h
common_swsrc/xilinx/: xbasic_types.h  xil_io.h  xil_types.h  xpseudo_asm.h  xspi.c  xspi.h  xspi_g.c  xspi_i.h  xspi_l.h  xspi_options.c  xspi_selftest.c  xspi_sinit.c  xstatus.h
customIP/IP/drivers/: pulse_controller.c  pulse_controller.h  pulse_controller_io.h
customIP/IP/drivers/pulse_controller_v4_00_b/src/: pulse_controller.c  pulse_controller.h  pulse_controller_io.h
data/: CMakeLists.txt  molecube.tmpfiles.conf
drivers/: pulse_controller.c  pulse_controller.h  pulse_controller_io.h
include/cgicc/: FormEntry.h  HTMLAtomicElement.h  HTMLAttribute.h  HTMLBooleanElement.h  HTMLClasses.h  HTMLDoctype.h  HTMLElement.h  HTMLElementList.h  HTTPContentHeader.h  HTTPCookie.h  HTTPHeader.h  HTTPPlainHeader.h  HTTPResponseHeader.h  HTTPStatusHeader.h  XMLPI.h
include/fcgi/: fcgios.h
lib/: CMakeLists.txt
lib/pulser/: CMakeLists.txt  commands.h  controller.cpp  controller.h  converter.h  ctrl_io.h  driver.cpp  driver.h  driver_p.h  instruction.cpp  instruction.h  program.cpp  program.h  pulser-config.h.in  pulser.cpp  pulser.h  pulser_p.h  sequence.cpp  sequence.h
lib/pulser_old/: CMakeLists.txt  commands.h  converter.h  driver_p.h  program.cpp  program.h  pulser.cpp  pulser.h  sequence.cpp
lib/utils/: CMakeLists.txt  container.h  fd_utils.cpp  fd_utils.h  log.cpp  log.h  macros.h  mem.cpp  mem.h  number.h  thread.h  timer.c  timer.cpp  timer.h  utils.h
lib/xilinx/: xil_types.h  xparameters.h  xparameters_ps.h  xspi.c  xspi.h  xspi_g.c  xspi_i.h  xspi_l.h  xspi_options.c  xspi_selftest.c  xspi_sinit.c  xspi_stats.c  xstatus.h
lib/xspi/: CMakeLists.txt  xparameters.h  xparameters_ps.h  xspi.c  xspi.cpp  xspi.h  xspi_g.c  xspi_g.cpp  xspi_i.h  xspi_l.h  xspi_options.c  xspi_options.cpp  xspi_selftest.c  xspi_selftest.cpp  xspi_sinit.c  xspi_sinit.cpp  xspi_stats.c  xspi_stats.cpp  xstatus.h
molecube/: AD9914.cpp  AD9914.h  CMakeLists.txt  CmdLineArgs.h  Makefile  init_system.cpp  linux_file_util.cpp  main.cpp  molecube.h  notes.md  notes.txt  parseMisc.cpp  parseMisc.h  parseTxtSeq.cpp  parseTxtSeq.h  saveloadmap.cpp  saveloadmap.h  verbosity.cpp
molecube/include/: common.h
molecube/parser/: parseMisc.cpp  parseMisc.h  parseMultiPart.cpp  parseMultiPart.h  parseTxtSeq.cpp  parseTxtSeq.h  saveloadmap.cpp  saveloadmap.h
molecube/platform/zynq_linux/: init_platform.cpp  init_system.cpp  init_system.h  main.cpp
molecube/zynq_linux/: init_platform.cpp  init_platform.h  init_system.cpp  init_system.h  main.cpp
test/: CMakeLists.txt  test_bits.cpp  test_controller.cpp  test_controller_threads.cpp  test_fcgi.cpp  test_fifo.cpp  test_latency.cpp  test_loopback.cpp  test_phy_addr.cpp  test_pulser_program.cpp  test_read_thread.cpp  test_self.cpp  test_short_pulse.cpp  test_thread.cpp
test/pulser/: CMakeLists.txt  test_controller.cpp  test_controller_threads.cpp  test_dds_echo.cpp  test_fifo.cpp  test_latency.cpp  test_loopback.cpp  test_program_request.cpp  test_pulser_program.cpp  test_regs.cpp  test_schedule.cpp  test_self.cpp  test_short_pulse.cpp
test/utils/: CMakeLists.txt  test_fifo.cpp  test_thread.cpp
tmp_include/cgicc/: CgiDefs.h  CgiEnvironment.h  CgiInput.h  CgiUtils.h  Cgicc.h  FormFile.h  HTMLAttributeList.h  HTTPHTMLHeader.h  HTTPRedirectHeader.h  HTTPXHTMLHeader.h  MStreamable.h  XHTMLDoctype.h  XMLDeclaration.h
tmp_include/fcgi/: fcgiapp.h  fcgio.h
